--- a/Game/Game.csproj
+++ b/Game/Game.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Compile Include="Game.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="scripts\Class1.cs" />
     <Compile Include="scripts\Player.cs" />
   </ItemGroup>
   <ItemGroup>
