--- a/Game/Game.csproj
+++ b/Game/Game.csproj
@@ -43,7 +43,9 @@
     <Compile Include="scripts\Enemy.cs" />
     <Compile Include="scripts\GameManager.cs" />
     <Compile Include="scripts\GameObject.cs" />
+    <Compile Include="scripts\Level.cs" />
     <Compile Include="scripts\LifeController.cs" />
+    <Compile Include="scripts\LoseWindow.cs" />
     <Compile Include="scripts\Player.cs" />
     <Compile Include="scripts\SpawnPoint.cs" />
     <Compile Include="scripts\Time.cs" />
