--- a/Game/Game.csproj
+++ b/Game/Game.csproj
@@ -57,6 +57,7 @@
     <Compile Include="scripts\PullGenerico.cs" />
     <Compile Include="scripts\Renderer.cs" />
     <Compile Include="scripts\SpawnPoint.cs" />
+    <Compile Include="scripts\Sword.cs" />
     <Compile Include="scripts\Time.cs" />
     <Compile Include="scripts\Transform.cs" />
     <Compile Include="scripts\Vector2.cs" />
