--- a/Game/Game.csproj
+++ b/Game/Game.csproj
@@ -70,10 +70,6 @@
     <Compile Include="scripts\WaveIndicator.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="C:\Users\Admin\Desktop\IOO\finalwave.png">
-      <Link>textures\assets\finalwave.png</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <Content Include="Engine.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -87,6 +83,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="textures\assets\defeat.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="textures\assets\finalwave.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="textures\assets\Healthbar\1heart.png">
